refactor: reduce gateway-mapping-http diff to minimum needed for model change
Revert cleanup/style changes in converters, mapper, util, validator, and root
packages that were not strictly needed for adapting to the new generator's
Optional<T> getters or other API differences.

This keeps the PR focused on the core model generation change and removes
bells/whistles like static imports, null-check removals, and renames that
should be done in follow-up PRs.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>